<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/emailBtn"
            style="@style/btnStyleSeagull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:text="@string/emailString" />

        <Button
            android:id="@+id/smsBtn"
            style="@style/btnStyleSeagull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailBtn"
            android:layout_margin="5dip"
            android:text="@string/smsString" />

        <Button
            android:id="@+id/phoneBtn"
            style="@style/btnStyleSeagull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/smsBtn"
            android:layout_margin="5dip"
            android:text="@string/phoneString" />
    </RelativeLayout>

</LinearLayout>