<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/productsBtn"
            style="@style/btnStyleSeagull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:text="@string/productsString" />

        <Button
            android:id="@+id/statisticsBtn"
            style="@style/btnStyleSeagull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productsBtn"
            android:layout_margin="5dip"
            android:text="@string/statisticsString" />

        <Button
            android:id="@+id/contactBtn"
            style="@style/btnStyleSeagull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/statisticsBtn"
            android:layout_margin="5dip"
            android:text="@string/contactString" />
    </RelativeLayout>

</LinearLayout>